<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, FormGenel!</string>
    <string name="app_name">Top 10</string>
	<string name="active">Active</string>
	<string name="passive">Passive</string>
	<string name="play">Oynat</string>
	<string name="about">Hakkında</string>
	<string name="loading">Yükleniyor...</string>
	<string name="ok">Tamam</string>
	<string name="lists_updated">Listeler güncellendi.</string>
	<string name="unable_to_get_list">Şarkı listesi alınamıyor. Internet bağlantısında veya kralfm.com.tr de bir sıkıntı olabilir.</string>
	<string name="problem_in_song">Bu şarkının bilgilerinde bir problem var. Şarkı listesini yenilemek çözüm olabilir.</string>
	<string name="info">Uygulama ilgili web sitelerinden listeleri çekerek şarkı örneklerini çalar. İnternet bağlantınız yok ise veya yavaş ise problem yaşayabilirsiniz. </string>
	<string name="info2"> </string>
	<string name="info3">Not-1: Web sitelerinin içeriği değişirse uygulama çalışmayabilir.</string>
	<string name="info4">Not-2: Bu açık kaynak kodlu hobi amaçlı geliştirilmiş bir projedir. Kaynak kodlara http://code.google.com/p/top-music-lists/\'dan ulaşabilirsiniz.</string>
	<string name="contributors_label">Destek Verenler</string>
	<string name="contributors">Burhan Uğur\nFatih Yakut\nOrhun Mert Şimşek\nBurak Aydın\nElif Dikbayır\nZeynep Nur Dilek\nErdem Lafcı\nBarış Erdem\nA. Oğuz Mermerkaya</string>
	<string name="connectNetwork">Lütfen internete bağlanınız.</string>
</resources>
