<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="15dip" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <TextView
            android:id="@+id/song"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contributors_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
         <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/contributors"
            android:textAppearance="?android:attr/textAppearanceSmall" />
         
                 <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/info2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/info3"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/info4"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</ScrollView>